syntax = "proto3";

option go_package = "github.com/tamararankovic/microservices_demo/common/users";

package users;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

service UsersService{
  rpc Get(GetRequest) returns(GetResponse) {
    option (google.api.http) = {
      get: "/users/{id}"
    };
  }
  rpc GetAll(GetAllRequest) returns(GetAllResponse) {
    option (google.api.http) = {
      get: "/users"
    };
  }
  rpc Insert(CreateUserRequest) returns(CreateUserResponse) {
    option (google.api.http) = {
      post: "/users"
      body: "user"
    };
  }
}

message GetRequest {
  string id = 1;
}

message GetResponse {
  User user = 1;
}

message GetAllRequest {
}

message GetAllResponse {
  repeated User users = 1;
}

message CreateUserRequest {
  NewUser user = 1;
}

message CreateUserResponse {
  User user = 1;
}

enum Gender {
  Female = 0;
  Male = 1;
}

message NewUser {
  string id = 1;
  string name = 2;
  string lastName = 3;
  string email = 4;
  string phoneNumber = 5;
  Gender gender = 6;
  google.protobuf.Timestamp birthDate = 7;
  string username = 8;
  string password = 9;
  string biography = 10;
}

message User {
  string id = 1;
  string name = 2;
  string lastName = 3;
  string email = 4;
  string phoneNumber = 5;
  Gender gender = 6;
  google.protobuf.Timestamp birthDate = 7;
  string username = 8;
  string biography = 9;
}

